src/objects/inscor__Account_Approvals__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Approvals</relationshipLabel>
        <relationshipName>Account_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Approval_Type1__c</fullName>
        <inlineHelpText>Select the authorizing/controlling certification for this approval, i.e. ISO for PO or FAA for Repairs.</inlineHelpText>
        <label>Approval Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting Approved</fullName>
                </value>
                <value>
                    <fullName>ISO</fullName>
                </value>
                <value>
                    <fullName>ASA</fullName>
                </value>
                <value>
                    <fullName>FAA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Auto_Unapprove__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this and any modules selected in the &quot;Unapprove Type&quot; will be automatically deactivated at the &quot;Expiration Date&quot;. Schedule must be turned on at the Company.Account Unapproval Schedule.</inlineHelpText>
        <label>Auto Unapprove?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>inscor__Company__c</referenceTo>
        <relationshipLabel>Account Approvals</relationshipLabel>
        <relationshipName>Account_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Expiration_Date__c</fullName>
        <inlineHelpText>This is the date when the &quot;Auto Unapprove&quot; will be triggered and remove the approvals for the selected Unapprove Types.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__Notification_Email__c</fullName>
        <inlineHelpText>An email will be sent when the Auto Unapprove conditions are met and the customer/vendor gets unapproved.</inlineHelpText>
        <label>Notification Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>inscor__Unapprove_Type__c</fullName>
        <inlineHelpText>If the Auto Unapprove option is set up, the items selected here will be automatically deactivated at Expiration Date.</inlineHelpText>
        <label>Unapprove Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>RO</fullName>
                </value>
                <value>
                    <fullName>RFQ</fullName>
                </value>
                <value>
                    <fullName>CQ</fullName>
                </value>
                <value>
                    <fullName>SO</fullName>
                </value>
                <value>
                    <fullName>WO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Unapproved_Date__c</fullName>
        <inlineHelpText>Date of the removal of the approval will be automatically filled in when conditions are met and unapproval has happened.</inlineHelpText>
        <label>Unapproved Date</label>
        <type>DateTime</type>
    </fields>
    <label>Account Approvals</label>
    <nameField>
        <displayFormat>AA-{0000000}</displayFormat>
        <label>Account Approvals Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>inscor__Approval_Expiration_Relation</fullName>
        <active>true</active>
        <description>Approval less or equal to expiration</description>
        <errorConditionFormula>inscor__Approval_Date__c &gt;  inscor__Expiration_Date__c</errorConditionFormula>
        <errorDisplayField>inscor__Approval_Date__c</errorDisplayField>
        <errorMessage>Approval Date should be previous to Expiration Date</errorMessage>
    </validationRules>
</CustomObject>